--- a/src/app/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/components/breadcrumb/breadcrumb.component.html
@@ -1,15 +1,13 @@
 <div class="">
   <spms-breadcrumb
-    [breadcrumbItems]="[
-      { label: 'Página Inicial ', url: '/', target: '_parent' },
-      { label: 'Meus Tickets', url: '/tickets', target: '_parent' },
-      { label: 'Validações', url: '/products/category', target: '_parent' },
+    [items]="[
+      { label: 'Página Inicial ', href: '/'},
+      { label: 'Meus Tickets', href: '/tickets'},
+      { label: 'Validações', href: '/products/category'},
       {
         label: 'Nº: S200716_000006',
-        url: '/products/category/product',
-        target: '_parent',
+        href: '/products/category/product',
       },
     ]"
-    [lastItemActivated]="false"
   />
 </div>
