--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,10 +1,39 @@
 <spms-icon fontIcon="users" color="primary" />
+<spms-icon fontIcon="xls" color="primary" />
+<spms-icon fontIcon="autopsy" color="primary" />
+<spms-icon fontIcon="death-certificate" color="primary" />
+<spms-icon fontIcon="backoffice" color="primary" />
+<spms-icon fontIcon="information-bulletin" color="primary" />
 
 <p>aaaaaaaaa</p>
 
 <i class="pi pi-check"></i>
 <i class="pi pi-user" style="font-size: 2.5rem"></i>
 <i class="pi pi-times" style="color: green"></i>
+
+
+<!-- <spms-footer
+  footerText="Powered by SPMS"
+  [spmsLogo]="false"
+  copyrightText="Todos os direitos reservados ao Governo da República Portuguesa - Ministério da Saúde"
+  [logos]="[
+    {
+      icon: 'spms',
+      color: 'primary',
+      size: '80px'
+    },
+    {
+      icon: 'sns',
+      color: 'primary',
+      size: '60px'
+    },
+    {
+      icon: 'republica-portuguesa-colors',
+      color: 'primary',
+      size: '60px'
+    },
+  ]"
+/> -->
 
 
 <!-- <div class="card">
