--- a/src/app/components/radio/radio.component.html
+++ b/src/app/components/radio/radio.component.html
@@ -17,6 +17,7 @@
       { id: 'opLarge', name: 'size', value: 'opLarge', size: 'large', checked: true },
       { id: 'opDisabled', name: 'size', value: 'opDisabled', disabled: true },
     ]"
+    (onChange)="changeRadio($event)"
   />
 </div>
 
