--- a/src/app/components/tabs/tabs.component.html
+++ b/src/app/components/tabs/tabs.component.html
@@ -89,7 +89,7 @@
 
 <div class="divider"></div>
 
-<h2>Simple navigation</h2>
+<!-- <h2>Simple navigation</h2>
 
 <spms-tabview>
   <spms-tab label="Avaliação Oftalmológica" path="/tab-1" [routerData]="{title: 'Custom new title'}" />
@@ -97,74 +97,4 @@
   <spms-tab label="Alergias" icon="users" path="/tab-2" [hasTopLeftMark]="true" />
 
   <spms-tab label="TNF" icon="reload" iconPosition="right" path="/tab-3" [disabled]="true" />
-</spms-tabview>
-
-<h2>Button vertical</h2>
-
-<spms-tabview [buttonTab]="true" [vertical]="true" position="left">
-  <spms-tab icon="home">
-    <div>
-      <h3>Tab I</h3>
-
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-    </div>
-  </spms-tab>
-
-  <spms-tab icon="calendar">
-    <div>
-      <h3>Tab II</h3>
-
-      <p>
-        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
-        ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Consectetur, adipisci velit, sed quia non numquam eius modi.
-      </p>
-    </div>
-  </spms-tab>
-
-  <spms-tab icon="clock">
-    <div>
-      <h3>Tab III</h3>
-
-      <p>
-        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa
-        qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus.
-      </p>
-    </div>
-  </spms-tab>
-
-  <spms-tab icon="home">
-    <div>
-      <h3>Tab IV</h3>
-
-      <p>
-        Aenean elementum commodo sollicitudin. In mattis interdum pretium. Integer nec malesuada nisi, at lacinia mi. Suspendisse tincidunt in velit eget posuere. Duis ac tincidunt est, nec rhoncus risus. Mauris quis feugiat elit, at
-        fermentum ipsum. Vivamus nec bibendum ipsum. Donec vel odio in sapien porta facilisis et suscipit ante. Mauris arcu odio, lacinia eget ligula pellentesque, hendrerit rhoncus libero.
-      </p>
-    </div>
-  </spms-tab>
-
-  <spms-tab icon="location">
-    <div>
-      <h3>Tab V</h3>
-
-      <p>
-        Nulla convallis erat at massa viverra, quis ultrices est cursus. Ut ex tellus, fringilla et fringilla ac, molestie ut ante. Fusce aliquam eget ante vel varius. Praesent fringilla euismod justo ut maximus. Vestibulum sit amet
-        luctus felis. Aenean nec lorem in tellus dictum tempus. Donec at leo accumsan, tempor felis ac, vestibulum nisi.
-      </p>
-    </div>
-  </spms-tab>
-
-  <spms-tab icon="documents">
-    <div>
-      <h3>Tab VI</h3>
-
-      <p>
-        Maecenas vulputate dapibus felis, et lacinia lectus pharetra ut. Aliquam erat volutpat. Etiam cursus eu dolor et imperdiet. Maecenas aliquet, arcu vitae rutrum rhoncus, dolor arcu mattis libero, et dapibus metus ligula sit amet
-        sem. Aenean ultricies magna eget facilisis aliquet. Aenean consequat nisl a pulvinar euismod. Sed sagittis, nulla eget porta blandit, metus ligula porttitor tortor, consectetur rhoncus orci tortor quis velit.
-      </p>
-    </div>
-  </spms-tab>
-</spms-tabview>
+</spms-tabview> -->
