--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,40 +1,46 @@
-<spms-button size="small" variant="contained" icon="users" />
-<spms-button size="small" variant="contained" icon="pi-check" />
+<div style="margin: 40px;"></div>
+
+<spms-button text="Teste" size="small" startIcon="users" />
+<spms-button size="small" variant="primary" endIcon="reload" />
 
 <h2>Botões primários - contained</h2>
 
 <div class="grid-container">
-  <spms-button label="Active small" size="small" variant="contained" (click)="handleClick()" />
-  <spms-button label="Inactive small" size="small" variant="contained" [disabled]="true" (click)="handleClick()" />
-  <spms-button label="Active icon small" size="small" variant="contained" icon="users" />
-  <spms-button label="Inactive icon small" size="small" variant="contained" icon="reload" [disabled]="true" />
+  <spms-button text="Active small" size="small" variant="primary" (onClick)="handleClick($event)" />
+  <spms-button text="Inactive small" size="small" variant="primary" [disabled]="true" (onClick)="handleClick($event)" />
+  <spms-button text="Active icon small" size="small" variant="primary" startIcon="users" />
+  <spms-button text="Inactive icon small" size="small" variant="primary" endIcon="reload" [disabled]="true" />
 
-  <spms-button label="Active medium" size="medium" variant="contained" />
-  <spms-button label="Inactive medium" size="medium" variant="contained" [disabled]="true" />
-  <spms-button label="Active icon medium" size="medium" variant="contained" icon="users" />
-  <spms-button label="Inactive icon medium" size="medium" variant="contained" icon="reload" [disabled]="true" />
-
-  <spms-button label="Active large" size="large" variant="contained" />
-  <spms-button label="Inactive large" size="large" variant="contained" [disabled]="true" />
-  <spms-button label="Active icon large" size="large" variant="contained" icon="users" />
-  <spms-button label="Inactive icon large" size="large" variant="contained" icon="reload" [disabled]="true" />
+  <spms-button text="Active large" size="large" variant="primary" />
+  <spms-button text="Inactive large" size="large" variant="primary" [disabled]="true" />
+  <spms-button text="Active icon large" size="large" variant="primary" startIcon="users" />
+  <spms-button text="Inactive icon large" size="large" variant="primary" endIcon="reload" [disabled]="true" />
 </div>
 
 <h2>Botões secundários - outlined</h2>
 
 <div class="grid-container">
-  <spms-button label="Active small" size="small" variant="outlined" />
-  <spms-button label="Inactive small" size="small" variant="outlined" [disabled]="true" />
-  <spms-button label="Active icon small" size="small" variant="outlined" icon="users" />
-  <spms-button label="Inactive icon small" size="small" variant="outlined" icon="reload" [disabled]="true" />
+  <spms-button text="Active small" size="small" variant="secondary" />
+  <spms-button text="Inactive small" size="small" variant="secondary" [disabled]="true" />
+  <spms-button text="Active icon small" size="small" variant="secondary" startIcon="users" />
+  <spms-button text="Inactive icon small" size="small" variant="secondary" endIcon="reload" [disabled]="true" />
 
-  <spms-button label="Active medium" size="medium" variant="outlined" />
-  <spms-button label="Inactive medium" size="medium" variant="outlined" [disabled]="true" />
-  <spms-button label="Active icon medium" size="medium" variant="outlined" icon="users" />
-  <spms-button label="Inactive icon medium" size="medium" variant="outlined" icon="reload" [disabled]="true" />
+  <spms-button text="Active large" size="large" variant="secondary" />
+  <spms-button text="Inactive large" size="large" variant="secondary" [disabled]="true" />
+  <spms-button text="Active icon large" size="large" variant="secondary" startIcon="users" />
+  <spms-button text="Inactive icon large" size="large" variant="secondary" endIcon="reload" [disabled]="true" />
+</div>
 
-  <spms-button label="Active large" size="large" variant="outlined" />
-  <spms-button label="Inactive large" size="large" variant="outlined" [disabled]="true" />
-  <spms-button label="Active icon large" size="large" variant="outlined" icon="users" />
-  <spms-button label="Inactive icon large" size="large" variant="outlined" icon="reload" [disabled]="true" />
+<h2>Botões de texto</h2>
+
+<div class="grid-container">
+  <spms-button text="Active small" size="small" variant="text" />
+  <spms-button text="Inactive small" size="small" variant="text" [disabled]="true" />
+  <spms-button text="Active icon small" size="small" variant="text" startIcon="users" />
+  <spms-button text="Inactive icon small" size="small" variant="text" endIcon="reload" [disabled]="true" />
+
+  <spms-button text="Active large" size="large" variant="text" />
+  <spms-button text="Inactive large" size="large" variant="text" [disabled]="true" />
+  <spms-button text="Active icon large" size="large" variant="text" startIcon="users" />
+  <spms-button text="Inactive icon large" size="large" variant="text" endIcon="reload" [disabled]="true" />
 </div>
