--- a/src/app/components/stepper/stepper.component.html
+++ b/src/app/components/stepper/stepper.component.html
@@ -3,10 +3,24 @@
     [steps]="steps"
     [activeStep]="step"
   />
-    <!-- [items]="items" -->
 
   <div class="button-container">
-    <spms-button label="Back" [disabled]="step === 0" (onClick)="handleBack()" />
-    <spms-button label="{{ step === steps - 1 ? 'Finish' : 'Next' }}" [disabled]="step === steps" (onClick)="handleNext()" />
+    <button [disabled]="step === 0" (click)="handleBack()">Back</button>
+    <button [disabled]="step === steps" (click)="handleNext()">{{ step === steps - 1 ? 'Finish' : 'Next' }}</button>
+  </div>
+</div>
+
+<div class="container">
+  <spms-stepper
+    [steps]="stepsString"
+    [activeStep]="stepString"
+    [items]="items"
+  />
+
+  <div class="button-container">
+    <button [disabled]="stepString === 0" (click)="handleBackString()">Back</button>
+    <button [disabled]="stepString === stepsString" (click)="handleNextString()">{{ stepString === stepsString - 1 ? 'Finish' : 'Next' }}</button>
+    <!-- <spms-button label="Back" [disabled]="stepString === 0" (onClick)="handleBackString()" /> -->
+    <!-- <spms-button label="{{ stepString === stepsString - 1 ? 'Finish' : 'Next' }}" [disabled]="stepString === stepsString" (onClick)="handleNextString()" /> -->
   </div>
 </div>
