--- a/src/app/components/switch/switch.component.html
+++ b/src/app/components/switch/switch.component.html
@@ -1,9 +1,22 @@
+<spms-switch
+  [checked]="data.estado"
+  [color]="data.estado ? 'success' : 'error'"
+  size="small"
+  iconOn="small-check"
+  iconOn="small-close"
+/>
+  <!-- (onChange)="onEstadoChange($event)" -->
+  <!-- [icon]="{
+    checked: { name: 'large-check', color: 'success' },
+    unchecked: { name: 'large-close', color: 'error' }
+  }" -->
+
 <h2>Size</h2>
 
 <div class="container">
-  <spms-switch [checked]="true" size="small" (onChange)="changeSwitch($event)" />
-  <spms-switch [checked]="false" size="medium" />
-  <spms-switch [checked]="true" size="large" />
+  <spms-switch [checked]="true" [hideIcons]="true" />
+  <spms-switch [checked]="true" iconOn="small-check" iconOff="small-close" />
+  <spms-switch [checked]="false" />
   <spms-switch [checked]="false" [disabled]="true" />
 </div>
 
@@ -14,8 +27,8 @@
   <spms-switch [checked]="true" color="secondary" />
   <spms-switch [checked]="true" color="success" />
   <spms-switch [checked]="true" color="warning" />
-  <spms-switch [checked]="true" color="error" />
-  <spms-switch [checked]="true" color="info" />
+  <spms-switch [checked]="true" color="danger" />
+  <spms-switch [checked]="true" color="informative" />
   <spms-switch [checked]="true" color="#FFC107" />
 </div>
 
@@ -23,13 +36,13 @@
 
 <div class="container">
   <spms-switch [checked]="true" label="Coimbra" />
-  <spms-switch [checked]="true" label="Braga" labelPosition="left" />
+  <spms-switch [checked]="true" label="Braga" />
 </div>
 
 <h2>SPMS Icons</h2>
 
 <div class="container">
-  <spms-switch [checked]="false" size="small" [icon]="{ checked: { name: 'large-check', color: 'primary' }, unchecked: { name: 'large-close', color: 'red' } }" />
+  <!-- <spms-switch [checked]="false" size="small" [icon]="{ checked: { name: 'large-check', color: 'primary' }, unchecked: { name: 'large-close', color: 'red' } }" />
   <spms-switch [checked]="false" size="medium" [icon]="{ checked: { name: 'large-check', color: 'primary' }, unchecked: { name: 'large-close', color: 'red' } }"  />
   <spms-switch
     [checked]="false"
@@ -37,16 +50,114 @@
     [icon]="{
       checked: { name: 'large-check', color: '#0099CC' }, unchecked: { name: 'large-close', color: 'red' }
     }"
-  />
+  /> -->
 </div>
 
 <div class="container">
-  <spms-switch
+  <!-- <spms-switch
     [checked]="false"
     [icon]="{ checked: { name: 'large-check', color: 'primary' }, unchecked: { name: 'large-close', color: 'red' } }"
   />
   <spms-switch
     [checked]="true"
     [icon]="{ checked: { name: 'large-check', color: 'primary' }, unchecked: { name: 'large-close', color: 'red' } }"
+  /> -->
+</div>
+
+
+<h2>Header com avatar</h2>
+<div class="border">
+  <spms-header
+    variant="simple"
+    username="Nuno Oliveira"
+    profilePicture="https://randomuser.me/api/portraits/men/34.jpg"
+    [notification]="5"
+    [options]="{
+      title: 'Meus alertas',
+      notifications: [
+        {
+          label: 'Notificações',
+          content: [
+            { date: 'Há 1 hora', title: 'Notificação 1', icon: 'documents' },
+            { date: 'Há 1 hora', title: 'Notificação 2', icon: 'new-request' },
+          ]
+        },
+        {
+          label: 'Alertas',
+          content: [
+            { date: 'Há 1 hora', title: 'Alerta 1', icon: 'pi-bell' },
+            { date: 'Há 1 hora', title: 'Alerta 2', icon: 'code' },
+          ]
+        },
+      ],
+      paths: {
+        openAllNotifications: '/notifications',
+        personalData: '/personal-data',
+        webAccessibility: '/acessibility'
+      }
+    }"
+    (configClick)="handleConfig()"
+    (logoutClick)="handleLogout()"
+  />
+</div>
+
+<h2>Avatar com letras</h2>
+<div class="border">
+  <spms-header
+    variant="letters"
+    username="Anderson Melo"
+    profilePicture="https://i.imgur.com/Eve2bjh.jpg"
+    primaryActionIcon="search"
+    secondaryActionIcon="definitions"
+    [options]="{
+      paths: {
+        openAllNotifications: '/notifications',
+        personalData: '/personal-data',
+        webAccessibility: '/acessibility'
+      }
+    }"
+    (configClick)="handleConfig()"
+    (logoutClick)="handleLogout()"
+  />
+</div>
+
+<h2>Sem avatar</h2>
+<div class="border">
+  <spms-header
+    variant="none"
+    username="Anderson Melo"
+    profilePicture="https://i.imgur.com/Eve2bjh.jpg"
+    primaryActionIcon="search"
+    secondaryActionIcon="definitions"
+    [options]="{
+      paths: {
+        openAllNotifications: '/notifications',
+        personalData: '/personal-data',
+        webAccessibility: '/acessibility'
+      }
+    }"
+    (configClick)="handleConfig()"
+    (logoutClick)="handleLogout()"
+  />
+</div>
+
+<h2>Nome do projeto</h2>
+<div class="border">
+  <spms-header
+    variant="project"
+    username="Anderson Melo"
+    projectName="PACE - Unidade de Planeamento, Arquitetura, Conformidade e Engenharia"
+    profilePicture="https://i.imgur.com/Eve2bjh.jpg"
+    primaryActionIcon="search"
+    secondaryActionIcon="definitions"
+    [options]="{
+      paths: {
+        openAllNotifications: '/notifications',
+        personalData: '/personal-data',
+        webAccessibility: '/acessibility'
+      }
+    }"
+    (configClick)="handleConfig()"
+    (logoutClick)="handleLogout()"
   />
 </div>
