--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import '@spms/styleguide/dist/styles.css';
-// @import 'primeicons/primeicons.css';
+// @import '@spms/styleguide/dist/styles.css';
+@import 'node_modules/@spms/styleguide/dist/themes/angular/primeng/theme.css';
+@import 'node_modules/primeng/resources/primeng.min.css';
+@import "primeicons/primeicons.css";
